fixed visibility issue for npr

--- a/src/components/NounPhraseRecognition/style.less
+++ b/src/components/NounPhraseRecognition/style.less
@@ -1,4 +1,4 @@
-NounPhraseRecognition-component-container {
+.NounPhraseRecognition-component-container {
     visibility: hidden;
 }
 
